[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Jump.gd" type="Script" id=1]
[ext_resource path="res://scripts/Walk.gd" type="Script" id=2]
[ext_resource path="res://scripts/Falling.gd" type="Script" id=3]
[ext_resource path="res://scripts/Violeta.gd" type="Script" id=4]
[ext_resource path="res://img/violeta.png" type="Texture" id=5]
[ext_resource path="res://scripts/LevitatingBox.gd" type="Script" id=6]
[ext_resource path="res://scripts/InPolygon.gd" type="Script" id=7]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/levitation.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.8907, 47.4355 )

[node name="Violeta" type="KinematicBody2D"]
position = Vector2( 147.587, 123.01 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 343.086, 455.766 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 343.09, 454.643 )
shape = SubResource( 1 )

[node name="Jump" type="Node2D" parent="."]
position = Vector2( -117.315, -119.646 )
script = ExtResource( 1 )

[node name="Walk" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="."]
script = ExtResource( 3 )

[node name="LevitatingBox" type="Node" parent="."]
script = ExtResource( 6 )

[node name="InPolygon" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="LevitationSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
